# dynamic_ac_generator_open_loop_three_step_load_10_40_70s_speed_voltage_slip_gif_mp4_study

./: .gitignore  PROJECT_CONTEXT.md  README.md  dynamic_ac_generator_resistive_load.ipynb  pyproject.toml
results/: damping_theory.csv  dynamic_generator_summary.csv  open_loop_equilibrium_curve.csv  validation_report.csv
scripts/: run_simulation.py
src/dynamic_ac_generator/: __init__.py  animation.py  cli.py  config.py  damping.py  electrical.py  excitation.py  generator.py  governor.py  load.py  model_types.py  plotting.py  results.py  runner.py  simulation.py  validation.py
tests/: test_animations.py  test_config.py  test_damping_equilibrium.py  test_load.py  test_open_loop_excitation.py  test_plotting.py  test_simulation.py  test_unregulated.py  test_waveforms.py
tools/: create_dynamic_ac_generator_notebook.py  regenerate_slip_animation.py
